--- a/src/Huskui.Avalonia/Controls/Card.axaml
+++ b/src/Huskui.Avalonia/Controls/Card.axaml
@@ -10,13 +10,12 @@
         <Setter Property="BorderBrush" Value="{StaticResource ControlBorderBrush}" />
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="Padding" Value="{StaticResource CardContentMargin}" />
-        <Setter Property="ClipToBounds" Value="True" />
         <Setter Property="Template">
             <ControlTemplate>
                 <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}"
                         Background="{TemplateBinding Background}" CornerRadius="{TemplateBinding CornerRadius}"
                         HorizontalAlignment="{TemplateBinding HorizontalAlignment}"
-                        VerticalAlignment="{TemplateBinding VerticalAlignment}">
+                        VerticalAlignment="{TemplateBinding VerticalAlignment}" BoxShadow="{TemplateBinding BoxShadow}">
                     <ContentPresenter Margin="{TemplateBinding Padding}" Content="{TemplateBinding Content}"
                                       ContentTemplate="{TemplateBinding ContentTemplate}"
                                       HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
