refactor(controls): 清理和优化代码结构
- 移除不必要的代码注释和未使用的命名空间
- 规范化`PackageReference`的格式
- 在`ToolTip.axaml`中添加`ToolTipFillMargin`的`Thickness`属性
- 在`Expander.axaml`中调整`IsVisible`属性的位置
- 修改`Animations.axaml`中的动画缓动函数为`CubicEaseOut`

--- a/src/Huskui.Avalonia/Controls/Expander.axaml
+++ b/src/Huskui.Avalonia/Controls/Expander.axaml
@@ -70,18 +70,19 @@
                                           ContentTemplate="{TemplateBinding ContentTemplate}"
                                           HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
                                           VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
-                                          Padding="{TemplateBinding Padding}" Margin=" 8,4,8,8" IsVisible="{TemplateBinding IsExpanded}"
+                                          Padding="{TemplateBinding Padding}" Margin=" 8,4,8,8"
+                                          IsVisible="{TemplateBinding IsExpanded}"
                                           Background="{StaticResource OverlaySolidBackgroundBrush}"
-                                          BoxShadow="0 0 4 0 #3F000000" CornerRadius="{TemplateBinding CornerRadius}"/>
+                                          BoxShadow="0 0 4 0 #3F000000" CornerRadius="{TemplateBinding CornerRadius}" />
                     </DockPanel>
                 </Border>
             </ControlTemplate>
         </Setter>
-        
+
         <Style Selector="^:disabled /template/ Border#Background">
             <Setter Property="Opacity" Value="{StaticResource ControlDimOpacity}" />
         </Style>
-        
+
         <Style Selector="^:expanded /template/ Border#Background">
             <Setter Property="Background" Value="{StaticResource CardBackgroundBrush}" />
         </Style>
