--- a/src/Huskui.Avalonia/Controls/ToolTip.axaml
+++ b/src/Huskui.Avalonia/Controls/ToolTip.axaml
@@ -1,6 +1,8 @@
 ﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <Thickness x:Key="ToolTipFillMargin">-12,-8</Thickness>
+
     <ControlTheme x:Key="{x:Type ToolTip}"
                   TargetType="ToolTip">
         <Setter Property="Background" Value="{StaticResource FlyoutBackgroundBrush}" />
@@ -11,10 +13,7 @@
                         Background="{TemplateBinding Background}"
                         BorderBrush="{TemplateBinding BorderBrush}"
                         BorderThickness="{TemplateBinding BorderThickness}"
-                        CornerRadius="{TemplateBinding CornerRadius}" ClipToBounds="{TemplateBinding ClipToBounds}">
-                    <Border.Effect>
-                        <DropShadowEffect OffsetX="0" OffsetY="0" Opacity="0.2" />
-                    </Border.Effect>
+                        CornerRadius="{TemplateBinding CornerRadius}" BoxShadow="0 0 4 0 #3F000000">
                     <ContentPresenter Name="PART_ContentPresenter"
                                       Padding="12,8"
                                       Content="{TemplateBinding Content}"
