--- a/src/Huskui.Avalonia/Themes/Animations.axaml
+++ b/src/Huskui.Avalonia/Themes/Animations.axaml
@@ -3,7 +3,7 @@
 
     <Style Selector="Popup[IsOpen=True] LayoutTransformControl#PART_LayoutTransform">
         <Style.Animations>
-            <Animation Duration="{StaticResource ControlSlowerAnimationDuration}" Easing="BackEaseOut">
+            <Animation Duration="{StaticResource ControlSlowerAnimationDuration}" Easing="CubicEaseOut">
                 <KeyFrame Cue="0.0">
                     <Setter Property="ScaleTransform.ScaleX" Value="0.98" />
                     <Setter Property="ScaleTransform.ScaleY" Value="0.98" />
